--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ h1 { margin: 0; font-size: 1.2rem; }
     padding: 15px; 
     margin-bottom: 15px; 
     box-shadow: 0 2px 4px rgba(0,0,0,0.05); 
-    line-height: 1.6;
+    line-height: 1.2;
     font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
 }
 
@@ -185,6 +185,29 @@ tr:last-child td { border-bottom: none; }
 .address-row-active {
     background-color: #e6e6e6; /* Gris claro para indicar selección */
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Sombra interior sutil */
+}
+
+
+.wifi-table {
+    width: 100%;
+    margin: 20px 0px;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.wifi-table th, .wifi-table td {
+    padding: 10px;
+    border: 1px solid #cccccc80;
+    /*border-bottom: 1px solid #000000;*/
+}
+
+.wifi-table th {
+    background-color: #f2f2f2;
+}
+
+.qr-code {
+    max-width: 200px;
+    margin-top: 15px;
 }
 
 /* ESTILOS PARA LA COLUMNA DE TELÉFONO */
