--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,16 @@ h1 { margin: 0; font-size: 1.2rem; }
 .modal-nav.prev { left: 10px; }
 .modal-nav.next { right: 10px; }
 
+
+/* For a responsive image that scales with the screen size */
+.small-persiana {
+  max-width: 100%; /* Ensures the image is never wider than its container */
+  width: 60%;    /* Makes the image take up 50% of its container's width */
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 /* TABLAS */
 table { width: 100%; border-collapse: collapse; margin-top: 10px; background: white; border-radius: 8px; overflow: hidden; }
 td { padding: 12px; border-bottom: 1px solid #eee; }
