--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,19 @@ h1 { margin: 0; font-size: 1.2rem; }
     font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
 }
 
+.list-frame { 
+    text-align: justify;
+    background-color: white; 
+    border:none
+    border-radius: 8px; 
+    padding: 15px; 
+    margin-bottom: 15px; 
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05); 
+    line-height: 1.2;
+    font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
+}
+
+
 .welcome-frame { border-left: 5px solid #2ecc71; font-size: 1.4rem; }
 
 /* SUB-SECCIONES Y DETALLES */
@@ -134,7 +147,7 @@ h1 { margin: 0; font-size: 1.2rem; }
     margin-bottom: 15px; 
     box-shadow: 0 2px 4px rgba(0,0,0,0.05); 
     line-height: 1.6;
-    font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
+    font-size: 1.1rem; /* Adjust this value to change the font size for all text frames */
 }
 .appliance-img { width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; display: block; margin-bottom: 10px;}
 .wifi-img-small { max-width: 75%; margin: 0 auto; }
