--- a/styles.css
+++ b/styles.css
@@ -119,19 +119,28 @@ h1 { margin: 0; font-size: 1.2rem; }
     font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
 }
 
-.list-frame { 
+.list-frame li{ 
     text-align: justify;
     background-color: white; 
-    border:none
-    border-radius: 8px; 
-    padding: 15px; 
+    border: none;
+    border-radius: 0px;
+    padding: 0px; 
     margin-bottom: 15px; 
     box-shadow: 0 2px 4px rgba(0,0,0,0.05); 
     line-height: 1.2;
-    font-size: 1.2rem; /* Adjust this value to change the font size for all text frames */
+    font-size: 1.2rem;
 }
 
+/* Reduce left padding on list containers */
+.list-frame ul {
+    padding-left: 20px; /* Adjust this value as needed */
+}
 
+/* Spacing for checkout list items 
+.list-frame li {
+    margin-bottom: 15px; /* Adjust this value for more or less space 
+}
+*/
 .welcome-frame { border-left: 5px solid #2ecc71; font-size: 1.4rem; }
 
 /* SUB-SECCIONES Y DETALLES */
@@ -316,22 +325,17 @@ tr:last-child td { border-bottom: none; }
 #washer-grid .grid-item img {
     width: 100%;
     height: 100%; 
-    
-    /* Mantiene la imagen completa dentro del cuadrado */
     object-fit: contain;
-    
     cursor: pointer;
     border-radius: 0;
     margin: 0;
     padding: 0;
-
-    /* Mantenemos display: block; como soporte, aunque vertical-align es más efectivo aquí */
     display: block; 
 }
 
-/* --- ESTILO PARA AUMENTAR EL ICONO DE PIN DE UBICACIÓN --- */
+/* --- ESTILO PARA AUMENTAR EL ICONO DE PIN DE LA TABLA DIRECCION ATALAIA --- */
 .pin-icon {
-    font-size: 2.5rem; /* Puedes ajustar este valor si lo quieres aún más grande */
+    font-size: 3rem; /* You can adjust this value to make it larger or smaller */
 }
 
 /* --- ESTILO PARA LA TABLA DE DIRECCIÓN DEL APARTAMENTO (BORDE) --- */
@@ -340,8 +344,10 @@ tr:last-child td { border-bottom: none; }
     border: 1px solid #000; /* NEGRO PURO */
     border-radius: 8px;
     border-collapse: collapse;
-    width: 100%;
+    width: 60%; /*Ancho que ocupa la tabla*/
     overflow: visible; /* AÑADIDO: Evita que el borde sea recortado por estilos generales */
+    margin-left: auto; /* Para centrar la tabla en horizontal*/
+    margin-right: auto; /* Para centrar la tabla en horizontal*/
     margin-bottom: 15px; /* Espacio inferior añadido */
 }
 
