--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ h1 { margin: 0; font-size: 1.2rem; }
     text-align: justify;
     background-color: white; 
     border: 1px solid #ccc; 
+    border: none; 
     border-radius: 8px; 
     padding: 15px; 
     margin-bottom: 15px; 
